# cmapr

./: .dev-commands.md  .gitignore  Makefile  PHASE0_COMPLETE.md  PROJECT_SUMMARY.md  README  README.md  REFACTORING_NOTES.md  SETUP.md  VALIDATION.md  chunked.ps  concept-mapper-roadmap.md  example_usage.py  naive_bayes.pickle  pos_tagger.py  pyproject.toml  requirements.txt  setup.py  tryout_nltk.py
.claude/: context.md  rules.md  settings.local.json
data/reference/: stopwords.json
data/sample/: CORPUS_SPEC.md  README.md  sample1_dialectics.txt  sample2_epistemology.txt  sample2_poststructural_political.txt  sample3_ontology.txt  test_corpus_manifest.json  test_philosophical_terms.txt
docs/: CHANGELOG.md  api-reference.md  concept-mapper-roadmap.md  replacement.md  roadmap.md  tutorial.md  usage-guide.md
examples/: README.md  graph.gexf  sample_text.txt  test_corpus.json  workflow.py  workflow.sh
examples/visualization/: index.html
output/cache/: brown_corpus_freqs.json
samples/: eco_spl.txt  eco_spl_small.txt  eco_spl_toc.txt  sample1_analytic_pragmatism.txt  sample2_poststructural_political.txt  sample3_mind_consciousness.txt
scripts/: __init__.py  check.py  download_nltk_data.py  format.py  lint.py  test.py
src/concept_mapper/: __init__.py  cli.py  validation.py
src/concept_mapper/analysis/: __init__.py  contextual_relations.py  cooccurrence.py  frequency.py  rarity.py  reference.py  relations.py  tfidf.py
src/concept_mapper/corpus/: __init__.py  loader.py  models.py
src/concept_mapper/export/: __init__.py  d3.py  formats.py  html.py
src/concept_mapper/graph/: __init__.py  builders.py  metrics.py  model.py  operations.py
src/concept_mapper/preprocessing/: __init__.py  cleaning.py  lemmatize.py  pipeline.py  segment.py  structure.py  tagging.py  tokenize.py
src/concept_mapper/search/: __init__.py  concordance.py  context.py  dispersion.py  extract.py  find.py
src/concept_mapper/storage/: __init__.py  backend.py  json_backend.py  utils.py
src/concept_mapper/syntax/: __init__.py  diagram.py
src/concept_mapper/terms/: __init__.py  manager.py  models.py  suggester.py
src/concept_mapper/transformations/: __init__.py  inflection.py  phrase_matcher.py  replacement.py  text_reconstruction.py
tests/: __init__.py  test_analysis.py  test_cli.py  test_cooccurrence.py  test_corpus.py  test_export.py  test_graph.py  test_inflection.py  test_pos_tagger.py  test_preprocessing.py  test_rarity.py  test_relations.py  test_sample_corpus.py  test_search.py  test_storage.py  test_terms.py
tests/preprocessing/: test_cleaning.py  test_lemmatize.py  test_segment.py  test_structure_detection.py
tests/transformations/: test_phrase_matcher.py  test_replacement.py  test_text_reconstruction.py
