[project]
name = "concept-mapper"
version = "1.0.0"
description = "A tool for extracting and visualizing an author's idiosyncratic conceptual vocabulary from primary texts"
authors = [{name = "Zach"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core NLP dependencies
    "nltk>=3.8",          # Tokenization, POS tagging, lemmatization
    "stanza>=1.8",        # Dependency parsing for sentence diagrams
    "networkx>=3.2",      # Graph construction and algorithms
    "click>=8.1",         # Command-line interface
]

[project.optional-dependencies]
dev = [
    # Essential dev tools
    "pytest>=8.3",        # Tests ⭐
    "black>=24.8",        # Formatter ⭐
    "ruff>=0.6",          # Linter + format alt ⭐
    "ipython>=8.27",      # REPL w/ autoreload ⭐
]

[project.scripts]
concept-mapper = "concept_mapper.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
