[project]
name = "concept-mapper"
version = "1.0.0"
description = "A tool for extracting and visualizing an author's idiosyncratic conceptual vocabulary from primary texts"
authors = [{name = "Zach"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core NLP dependencies
    "nltk>=3.8",          # Tokenization, POS tagging, lemmatization
    "inflect>=7.0",       # Inflection generation for synonym replacement
    "pattern3>=3.0",      # English conjugation and inflection
    "stanza>=1.8",        # Dependency parsing for sentence diagrams
    "networkx>=3.2",      # Graph construction and algorithms
    "click>=8.1",         # Command-line interface
    "pdfplumber>=0.10",   # PDF text extraction
]

[project.optional-dependencies]
dev = [
    # Essential dev tools
    "pytest>=8.3",        # Tests ⭐
    "ruff>=0.6",          # Linter + formatter ⭐
    "ipython>=8.27",      # REPL w/ autoreload ⭐
    "reportlab>=4.0",     # PDF generation for tests
]

[project.scripts]
cmapr = "concept_mapper.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
